# weather

./: .gitignore  pyproject.toml
tests/: test_cli.py
weather/: cli.py
